name:                disasm86
version:             0.1.0.0
synopsis:            Pure Haskell disassembler for Intel x86 machine code
description:         Please see README.md
homepage:            https://github.com/ab9rf/disasm86#readme
license:             BSD3
license-file:        LICENSE
author:              Kelly Kinkade
maintainer:          kelly.lynn.martin@gmail.com
copyright:           unspecified
category:            unspecified
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Disassembler
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , binary
  default-language:    Haskell2010

test-suite test
    hs-source-dirs:     src/test
    main-is:            main.hs
    type:               exitcode-stdio-1.0
    build-depends:      disasm86
                      , base
                      , QuickCheck
                      , hspec
                      , bytestring
                      , hdis86
                      , random
    other-modules:      DisassemblerSpec
    default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/ab9rf/disasm86
